--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
 requests==2.32.5
+scipy==1.17.0
 six==1.17.0
 stack-data==0.6.3
 tornado==6.5.2
